feat: fpm-based linux installer packaging